tests/paczka1/fuzzy1/72894680.err
Error in line 2: GCz S87 -3,0
Error in line 3: DvvqxIE A79 61,5
Error in line 9: DvvqxIE A740 33,3
Error in line 8: xl2HiI7 S901 24,1
Error in line 25: DvvqxIE S87 79,5
Error in line 26: DvvqxIE A740 32,6
Error in line 27: DvvqxIE A79 13,3
